cmake_minimum_required(VERSION 3.12)
project(problem_sloving)

set(CMAKE_CXX_STANDARD 14)

add_executable(problem_sloving main.cpp)
#add_executable(4-1b 4-1b.cpp)
add_executable(problem-a 4-8a.cpp)
add_executable(problem-b 4-8b.cpp)
add_executable(problem-c 4-8c.cpp)
add_executable(problem-d 4-8d.cpp)